--- a/style.css
+++ b/style.css
@@ -99,6 +99,21 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 #slider1 .pagination .page.current a {
 	background: #fff;
 }
+#slider1.touch .pagination {
+	height: 24px;
+	-webkit-box-shadow: inset 0 -4px 10px rgba(0, 0, 0, .8), inset 0 15px 0 rgba(255, 255, 255, .1), inset 0 1px 0 rgba(0, 0, 0, .5), inset 0 2px 0 rgba(255, 255, 255, .2), 0 3px 5px rgba(0, 0, 0, .5);
+	-moz-box-shadow: inset 0 -4px 10px rgba(0, 0, 0, .8), inset 0 15px 0 rgba(255, 255, 255, .1), inset 0 1px 0 rgba(0, 0, 0, .5), inset 0 2px 0 rgba(255, 255, 255, .2), 0 3px 5px rgba(0, 0, 0, .5);
+	box-shadow: inset 0 -4px 10px rgba(0, 0, 0, .8), inset 0 15px 0 rgba(255, 255, 255, .1), inset 0 1px 0 rgba(0, 0, 0, .5), inset 0 2px 0 rgba(255, 255, 255, .2), 0 3px 5px rgba(0, 0, 0, .5);
+}
+#slider1.touch .pagination .page {
+	width: 20px;
+	height: 20px;
+}
+#slider1.touch .pagination .page a {
+	width: 18px;
+	height: 18px;
+	border-radius: 9px;
+}
 
 #slider2 .pagination {
 	list-style: none;
@@ -220,21 +235,6 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 	#slider1 .next, #slider2 .next, #slider3 .next, #slider1 .previous, #slider2 .previous, #slider3 .previous {
 		top: 130px;
 	}
-	#slider1 .pagination {
-		height: 24px;
-		-webkit-box-shadow: inset 0 -4px 10px rgba(0, 0, 0, .8), inset 0 15px 0 rgba(255, 255, 255, .1), inset 0 1px 0 rgba(0, 0, 0, .5), inset 0 2px 0 rgba(255, 255, 255, .2), 0 3px 5px rgba(0, 0, 0, .5);
-		-moz-box-shadow: inset 0 -4px 10px rgba(0, 0, 0, .8), inset 0 15px 0 rgba(255, 255, 255, .1), inset 0 1px 0 rgba(0, 0, 0, .5), inset 0 2px 0 rgba(255, 255, 255, .2), 0 3px 5px rgba(0, 0, 0, .5);
-		box-shadow: inset 0 -4px 10px rgba(0, 0, 0, .8), inset 0 15px 0 rgba(255, 255, 255, .1), inset 0 1px 0 rgba(0, 0, 0, .5), inset 0 2px 0 rgba(255, 255, 255, .2), 0 3px 5px rgba(0, 0, 0, .5);
-	}
-	#slider1 .pagination .page {
-		width: 20px;
-		height: 20px;
-	}
-	#slider1 .pagination .page a {
-		width: 18px;
-		height: 18px;
-		border-radius: 9px;
-	}
 	
 	#slider2 .pagination {
 		bottom: 20px;
@@ -268,21 +268,6 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 	}
 	#slider1 .next, #slider2 .next, #slider3 .next, #slider1 .previous, #slider2 .previous, #slider3 .previous {
 		top: 105px;
-	}
-	#slider1 .pagination {
-		height: 24px;
-		-webkit-box-shadow: inset 0 -4px 10px rgba(0, 0, 0, .8), inset 0 15px 0 rgba(255, 255, 255, .1), inset 0 1px 0 rgba(0, 0, 0, .5), inset 0 2px 0 rgba(255, 255, 255, .2), 0 3px 5px rgba(0, 0, 0, .5);
-		-moz-box-shadow: inset 0 -4px 10px rgba(0, 0, 0, .8), inset 0 15px 0 rgba(255, 255, 255, .1), inset 0 1px 0 rgba(0, 0, 0, .5), inset 0 2px 0 rgba(255, 255, 255, .2), 0 3px 5px rgba(0, 0, 0, .5);
-		box-shadow: inset 0 -4px 10px rgba(0, 0, 0, .8), inset 0 15px 0 rgba(255, 255, 255, .1), inset 0 1px 0 rgba(0, 0, 0, .5), inset 0 2px 0 rgba(255, 255, 255, .2), 0 3px 5px rgba(0, 0, 0, .5);
-	}
-	#slider1 .pagination .page {
-		width: 20px;
-		height: 20px;
-	}
-	#slider1 .pagination .page a {
-		width: 18px;
-		height: 18px;
-		border-radius: 9px;
 	}
 	
 	#slider2 .pagination {
