--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
 	
 	font: 14px/20px Helvetica-Light, HelveticaNeue-Light, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
+a {
+	-webkit-tap-highlight-color: transparent;
+	color: #448ec2;
+}
 h1 {
 	padding: 10px;
 	font-size: 48px;
@@ -96,6 +100,13 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 	box-shadow: inset 0 -2px 4px rgba(0, 0, 0, .2), inset 0 1px 2px rgba(0, 0, 0, .2), 0 -1px 1px rgba(0, 0, 0, .8);
 	text-indent: -9000px;
 }
+#slider1 .pagination .page a:active {
+	background: #fff;
+	background: rgba(255, 255, 255, .5);
+	-webkit-box-shadow: inset 0 -2px 4px rgba(0, 0, 0, .2), inset 0 2px 4px rgba(0, 0, 0, .4), 0 -1px 1px rgba(0, 0, 0, .8);
+	-moz-box-shadow: inset 0 -2px 4px rgba(0, 0, 0, .2), inset 0 2px 4px rgba(0, 0, 0, .4), 0 -1px 1px rgba(0, 0, 0, .8);
+	box-shadow: inset 0 -2px 4px rgba(0, 0, 0, .2), inset 0 2px 4px rgba(0, 0, 0, .4), 0 -1px 1px rgba(0, 0, 0, .8);
+}
 #slider1 .pagination .page.current a {
 	background: #fff;
 }
@@ -147,6 +158,15 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 }
 #slider2 .pagination .page a {
 	display: block;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+}
+#slider2 .pagination .page a img {
+	display: block;
+	-webkit-transition: -webkit-transform .15s;
+}
+#slider2 .pagination .page a img.square {
+	display: none;
 }
 #slider2 .pagination .page.current {
 	width: 244px;
@@ -156,8 +176,12 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 #slider2 .pagination .page.current a {
 	border: 2px solid #fff;
 }
-#slider2 .pagination .page.current a img {
+#slider2 .pagination .page.current a img.thumb {
 	display: block;
+}
+#slider2 .pagination .page a:active img.thumb {
+	-webkit-transform: perspective(1000) translateZ(-50px);
+	-moz-transform: perspective(1000) translateZ(-50px);
 }
 
 #paged_slider {
@@ -237,7 +261,6 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 	}
 	
 	#slider2 .pagination {
-		bottom: 20px;
 		height: 56px;
 	}
 	#slider2 .pagination .page {
@@ -252,7 +275,7 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 	#slider2 .pagination .page.current a {
 		border: 2px solid #fff;
 	}
-	#slider2 .pagination .page a img {
+	#slider2 .pagination .page a img.thumb {
 		width: 120px;
 		height: 50px;
 	}
@@ -271,27 +294,27 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 	}
 	
 	#slider2 .pagination {
-		bottom: 10px;
 		height: 56px;
 	}
-	#slider2:hover .pagination {
-		bottom: 10px;
-	}
 	#slider2 .pagination .page {
-		width: 120px;
+		width: 50px;
 		height: 50px;
 	}
 	#slider2 .pagination .page.current {
-		width: 124px;
+		width: 54px;
 		height: 54px;
 		padding: 1px;
 	}
 	#slider2 .pagination .page.current a {
 		border: 2px solid #fff;
 	}
-	#slider2 .pagination .page a img {
-		width: 120px;
+	#slider2 .pagination .page a img.square {
+		display: block;
+		width: 50px;
 		height: 50px;
+	}
+	#slider2 .pagination .page a img.thumb {
+		display: none !important;
 	}
 }
 
@@ -313,6 +336,30 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 	#slider1 .pagination {
 		display: none;
 	}
+	
+	#slider2 .pagination {
+		height: 56px;
+	}
+	#slider2 .pagination .page {
+		width: 50px;
+		height: 50px;
+	}
+	#slider2 .pagination .page.current {
+		width: 54px;
+		height: 54px;
+		padding: 1px;
+	}
+	#slider2 .pagination .page.current a {
+		border: 2px solid #fff;
+	}
+	#slider2 .pagination .page a img.square {
+		display: block;
+		width: 50px;
+		height: 50px;
+	}
+	#slider2 .pagination .page a img.thumb {
+		display: none !important;
+	}
 }
 
 @media only screen and (max-width: 479px) {
@@ -333,6 +380,36 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 	#slider1 .pagination {
 		display: none;
 	}
+	
+	#slider2 .pagination {
+		height: 36px;
+	}
+	#slider2:hover .pagination {
+		bottom: 5px;
+	}
+	#slider2.touch .pagination {
+		bottom: 5px;
+	}
+	#slider2 .pagination .page {
+		width: 30px;
+		height: 30px;
+	}
+	#slider2 .pagination .page.current {
+		width: 34px;
+		height: 34px;
+		padding: 1px;
+	}
+	#slider2 .pagination .page.current a {
+		border: 2px solid #fff;
+	}
+	#slider2 .pagination .page a img.square {
+		display: block;
+		width: 30px;
+		height: 30px;
+	}
+	#slider2 .pagination .page a img.thumb {
+		display: none !important;
+	}
 }
 
 @media only screen and (max-width: 599px) {
@@ -343,12 +420,6 @@ h1, h2, p, #slider1, #slider2, #slider3 {
 	h2 {
 		font-size: 24px;
 		line-height: 30px;
-	}
-}
-
-@media only screen and (max-width: 599px) {
-	#slider2 .pagination {
-		display: none;
 	}
 }
 
