--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
 	padding: 0;
 	
 	font: 14px/20px Helvetica-Light, HelveticaNeue-Light, Helvetica Neue, Helvetica, Arial, sans-serif;
+	-webkit-text-size-adjust:none;
 }
 a {
 	-webkit-tap-highlight-color: transparent;
